# pkg

./: .gitignore  Cargo.toml  README.md  build.toml  package.tl
.cargo/: config.toml
libpkg/: Cargo.toml
libpkg/src/: error.rs  event.rs  generations.rs  lib.rs  manager.rs  nushell.rs  package.rs  paths.rs  sandbox.rs  state.rs  store.rs  util.rs
libpkg/src/base-config/: env.tl  services.tl  users.tl
libpkg/src/store/: gc.rs  install.rs  mod.rs  remove.rs
src/: cli.rs  main.rs
src/commands/: init_root.rs  install.rs  mod.rs  remove.rs
