[package]
name = "libpkg"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib", "rlib"]

[features]
default = ["repositories"]
repositories = ["dep:reqwest", "dep:url"]

[dependencies]
# Data fetching
reqwest = { workspace = true, optional = true }
url = { workspace = true, features = ["serde"], optional = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }
serde-inline-default = { workspace = true }

# OS APIs
rustix = { workspace = true, features = ["fs", "mount"] }
nix = { workspace = true, features = ["user", "process"] }

# Other
thiserror = { workspace = true }

logger = { workspace = true }
tl = { workspace = true, features = ["toml"] }

[lints]
workspace = true
