[package]
name = "libpkg"
version = "0.1.0"
edition.workspace = true

[features]
default = ["repositories"]
repositories = ["dep:reqwest", "dep:url"]

[dependencies]
prelude.workspace = true
tl = { workspace = true, features = ["toml"] }

# Data fetching
reqwest = { workspace = true, optional = true }
url = { workspace = true, features = ["serde"], optional = true }

# Serialization
serde.workspace = true
bincode.workspace = true
serde-inline-default.workspace = true

# OS APIs
rustix = { workspace = true, features = ["fs", "mount"] }
nix = { workspace = true, features = ["user", "process"] }
fs_extra.workspace = true

# Nushell
nu-embed.workspace = true

# Other
glob.workspace = true

[lints]
workspace = true
